node-main/deps/v8/test/message/fail/modules-star-conflict2.mjs
// Copyright 2016 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

export * from "../../mjsunit/modules-skip-star-exports-conflict.mjs";
export * from "../../mjsunit/modules-skip-6.mjs";

import {a} from "modules-star-conflict2.mjs";
